--- a/css/style.css
+++ b/css/style.css
@@ -1304,7 +1304,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     left: 0;
     width: 100%;
     height: 100%;
-    padding: 50% 4%;
+    padding: 45% 4%;
     text-align: center;
 }
 
@@ -1432,7 +1432,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #footer .copyright {
-    text-align: center;
+    text-align: left;
     padding-top: 30px;
 }
 
