--- a/css/style2.css
+++ b/css/style2.css
@@ -1301,219 +1301,132 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 /* Team Section
 --------------------------------*/
-
-
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 #team {
-    padding: 0;
-    background: #fff;
+    background: #eee !important;
 }
 
-#team .container-fluid {
-    margin: 0;
-}
-
-#team .row{
-    margin: 0;
-    padding: 0;
-}
-#team .row .col-md-4{
-    margin: 0;
-    padding: 0;
-}
-
-.profile-card {
-    position: relative;
-    overflow: hidden;
-    margin: 50px;
-}   
-
-.profile-card .profile-img img {
-    width: 100%;
-    height: 100%;
-}
-
-.profile-card .profile-content::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 50%;
-    height: 40%;
-    border: 3px solid #222;
-    border-right: 3px solid transparent;
-    border-bottom: 3px solid transparent;
-    transform: scale(1, 1);
-    transition: all 0.50s linear;
-}
-
-.profile-card .profile-content::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 50%;
-    height: 40%;
-    border: 3px solid #222;
-    border-left: 3px solid transparent;
-    border-top: 3px solid transparent;
-    transition: all 0.50s linear;
-}
-
-.profile-card:hover .profile-content:before {
-    top: 20px;
-    left: 20px;
-}
-
-.profile-card:hover .profile-content:after {
-    bottom: 20px;
-    right: 20px;
-}
-
-@media(max-width: 400px){
-    .profile-card:hover .profile-content:before {
-        top: 5px;
-        left: 5px;
-    }
-    
-    .profile-card:hover .profile-content:after {
-        bottom: 5px;
-        right: 5px;
-    }
-}
-
-.profile-card .profile-content::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    right: 0;
-    width: 50%;
-    height: 40%;
-    border: 3px solid #222;
-    border-left: 3px solid transparent;
-    border-top: 3px solid transparent;
-    transform: scale(1, 1);
-    transition: all 0.50s linear;
-}
-
-.profile-card .profile-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    padding: 45% 4%;
-    text-align: center;
-}
-
-.profile-card .profile-content .title {
-    font-size: 24px;
-    color: #fff;
-    opacity: 0;
-    letter-spacing: 2px;
-    text-transform: uppercase;
-    transform: translateY(-100px);
-    transition: all 900ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.20s;
-}
-
-.profile-card:hover .title {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.profile-card:hover .title::after {
-    content: "";
-    display: block;
-    width: 50%;
-    margin: 10px auto;
-    border-bottom: 2px solid #222;
-}
-
-.profile-card:hover .profile-content {
-    background: linear-gradient(115.55167547539611deg, rgba(244, 72, 104, .5) 11.407226448257765%, rgba(244, 72, 104, .5) 25.859348610457452%, rgba(243, 72, 104, .5) 33.50344628302588%, rgba(158, 0, 236, .5) 68.73795899252097%);
-}
-
-.profile-card .profile-content .title {
-    font-size: 16px;
-}
-
-.profile-card .profile-content .title>span {
-    display: block;
-    margin: 5px 0;
-    font-size: 10px;
-    text-transform: capitalize;
-}
-
-@media(max-width: 400px){
-    .profile-card .profile-content .title {
-        font-size: 12px;
-    }
-    .profile-card .profile-content .title>span {
-        font-size: 8px;
-    }
-}
-
-.profile-card .profile-content .social-link {
-    margin: 20px 0;
-    padding: 0;
-    opacity: 0;
-    transform: translateY(100px);
-    transition: all 600ms cubic-bezier(0.68, -0.55, 0.265, 1.55) 0.20s;
-}
-
-.profile-card:hover .social-link {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.profile-card .profile-content .social-link li {
-    display: inline-block;
-    list-style: none;
-    margin: 0 4px;
-}
-
-.profile-card .profile-content .social-link li a {
-    color: #333;
-    width: 30px;
-    height: 25px;
-    line-height: 24px;
-    text-align: center;
-    border-radius: 5px;
-    background-color: #fff;
-}
-
-/* tab controllers */
-.panel{
-    display: none;
-}
-.panel.active{
-    display: block;
-}
-.nav{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-bottom: 50px;
-}
-.nav button{
-    transform: skewX(-30deg);
-    padding: 10px;
-    margin: 5px 5px;
-    border: none;
+.btn-primary:hover,
+.btn-primary:focus {
+    background-color: #108d6f;
+    border-color: #108d6f;
+    box-shadow: none;
     outline: none;
-    background: rgb(41, 41, 41);
+}
+
+.btn-primary {
     color: #fff;
-    font-weight: bold;
-    box-shadow: 0 5px 10px rgba(0,0,0,.5);
-    transition: .3s;
+    background-color: #007b5e;
+    border-color: #007b5e;
 }
-.nav button:hover{
-    transform: skewX(-25deg);
-    background: #009f00;
-    box-shadow: 0 5px 10px rgba(0,0,0,.8);
+
+section {
+    padding: 60px 0;
 }
-.nav button.active{
-    background: #009f00;
-    box-shadow: 0 5px 15px #fff;
+
+section .section-title {
+    text-align: center;
+    color: #191b1b;
+    margin-bottom: 50px;
+    text-transform: uppercase;
+}
+
+#team .card {
+    border: none;
+    background: #ffffff;
+}
+
+.image-flip:hover .backside,
+.image-flip.hover .backside {
+    -webkit-transform: rotateY(0deg);
+    -moz-transform: rotateY(0deg);
+    -o-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+    border-radius: .25rem;
+}
+
+.image-flip:hover .frontside,
+.image-flip.hover .frontside {
+    -webkit-transform: rotateY(180deg);
+    -moz-transform: rotateY(180deg);
+    -o-transform: rotateY(180deg);
+    transform: rotateY(180deg);
+}
+
+.mainflip {
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -moz-transition: 1s;
+    /*-moz-transform: perspective(1000px);*/
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+    position: relative;
+}
+
+.frontside {
+    position: relative;
+  /*  -webkit-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);*/
+    z-index: 2;
+    margin-bottom: 30px;
+}
+
+.backside {
+    position: absolute;
+    top: 0;
+    left: 0;
+    background: white;
+    -webkit-transform: rotateY(-180deg);
+    -moz-transform: rotateY(-180deg);
+    -o-transform: rotateY(-180deg);
+    -ms-transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    -webkit-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    -moz-box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+    box-shadow: 5px 7px 9px -4px rgb(158, 158, 158);
+}
+
+.frontside,
+.backside {
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    backface-visibility: hidden;
+    -webkit-transition: 1s;
+    -webkit-transform-style: preserve-3d;
+    -moz-transition: 1s;
+    -moz-transform-style: preserve-3d;
+    -o-transition: 1s;
+    -o-transform-style: preserve-3d;
+    -ms-transition: 1s;
+    -ms-transform-style: preserve-3d;
+    transition: 1s;
+    transform-style: preserve-3d;
+}
+
+.frontside .card,
+.backside .card {
+    min-height: 312px;
+}
+
+.backside .card a {
+    font-size: 18px;
+    color: #007b5e !important;
+}
+
+.frontside .card .card-title,
+.backside .card .card-title {
+    color: #007b5e !important;
+}
+
+.frontside .card .card-body img {
+    width: 120px;
+    height: 120px;
+    border-radius: 50%;
 }
 
 
