--- a/css/style2.css
+++ b/css/style2.css
@@ -8,7 +8,13 @@
 /*--------------------------------------------------------------
 # General
 --------------------------------------------------------------*/
-
+html,body
+{
+    width: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 body {
     background: #fff;
     color: #666666;
@@ -781,7 +787,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     box-shadow: 5px 10px 15px rgba(0,0,0,.5);
   }
   
-  #events .events-extra h4 {
+  #about .events-extra h4 {
     font-weight: 600;
     font-size: 24px;
   }
@@ -881,6 +887,13 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 15px;
     text-align: justify;
 }
+@media(max-width: 1100px){
+    .box{
+        top: 110%;
+        width: 95%;
+        height: 1300px;
+    }
+}
 @media(max-width: 1000px){
     #clubs h1 {
        padding-bottom: 150px;
@@ -902,13 +915,56 @@ body.mobile-nav-active #mobile-nav-toggle {
         width: 100%;
     }
 }
+@media(max-width: 770px){
+    .box{
+        top: 110%;
+        width: 85%;
+        height: 1300px;
+    }
+}
+@media(max-width: 600px){
+    .box{
+        top: 110%;
+        width: 88%;
+        height: 1400px;
+    }
+}
 @media(max-width: 500px){
     .box{
         width: 75%;
         height: 1500px;
     }
 }
-
+@media(max-width: 420px){
+    #clubs .container {
+        height: 2300px;
+    }
+    .box{
+        top: 170%;
+        width: 75%;
+        height: 2000px;
+    }
+}
+@media(max-width: 380px){
+    #clubs .container {
+        height: 2500px;
+    }
+    .box{
+        top: 185%;
+        width: 75%;
+        height: 2200px;
+    }
+}
+@media(max-width: 325px){
+    #clubs .container {
+        height: 2700px;
+    }
+    .box{
+        top: 210%;
+        width: 75%;
+        height: 2500px;
+    }
+}
 /*  ******   */
 #clubs .col-content-images{
     width: 100%;
@@ -992,6 +1048,17 @@ body.mobile-nav-active #mobile-nav-toggle {
   #wardenMessage .container {
       height: 1200px;
   }
+  @media(max-width: 1100px){
+    #wardenMessage .container {
+        height: 1200px;
+    }
+    .bg-text {
+        height: 900px;
+        width: 95%;
+        top: 35%;
+        font-size: 17px;
+      }
+}
   @media(max-width: 1000px) {
     .bg-text {
         height: 1300px;
@@ -1003,7 +1070,61 @@ body.mobile-nav-active #mobile-nav-toggle {
         height: 1700px;
     }
   }
-
+  @media(max-width: 770px){
+    #wardenMessage .container {
+        height: 1600px;
+    }
+    .bg-text {
+        height: 1150px;
+        width: 95%;
+        top: 46%;
+        font-size: 17px;
+      }
+}
+@media(max-width: 600px){
+    #wardenMessage .container {
+        height: 1600px;
+    }
+    .bg-text {
+        height: 1300px;
+        width: 95%;
+        top: 48%;
+        font-size: 17px;
+      }
+}
+  @media(max-width: 420px){
+    #wardenMessage .container {
+        height: 2100px;
+    }
+    .bg-text {
+        height: 1750px;
+        width: 95%;
+        top: 65%;
+        font-size: 17px;
+      }
+}
+  @media(max-width: 380px){
+    #wardenMessage .container {
+        height: 2100px;
+    }
+    .bg-text {
+        height: 1900px;
+        width: 95%;
+        top: 65%;
+        font-size: 17px;
+      }
+}
+@media(max-width: 325px){
+    #wardenMessage .container {
+        height: 2500px;
+    }
+    .bg-text {
+        height: 2230px;
+        width: 95%;
+        top: 80%;
+        font-size: 17px;
+      }
+}
 /* Events Section */
 
 #events {
