--- a/css/style2.css
+++ b/css/style2.css
@@ -19,7 +19,7 @@ body {
     background: #fff;
     color: #666666;
     font-family: "Open Sans", sans-serif;
-    background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../img/call-to-action-bg.jpg) fixed center center;
+    background: linear-gradient(rgba(0, 142, 99, 0.1), rgba(0, 0, 0, 0.1)), url(../imghostel/call-to-action-bg-3.jpg) fixed center center;
     background-size: cover;
 }
 
