--- a/css/style2.css
+++ b/css/style2.css
@@ -24,14 +24,14 @@ body {
 }
 
 a {
-    color: #18d26e;
+    color: #ff9306;
     transition: 0.5s;
 }
 
 a:hover,
 a:active,
 a:focus {
-    color: #18d36e;
+    color: #ff9306;
     outline: none;
     text-decoration: none;
 }
@@ -58,7 +58,7 @@ h6 {
 .back-to-top {
     position: fixed;
     display: none;
-    background: #18d26e;
+    background: #ff9306;
     color: #fff;
     width: 44px;
     height: 44px;
@@ -96,7 +96,7 @@ h6 {
     top: calc(50% - 30px);
     left: calc(50% - 30px);
     border: 6px solid #f2f2f2;
-    border-top: 6px solid #18d26e;
+    border-top: 6px solid #ff9306;
     border-radius: 50%;
     width: 60px;
     height: 60px;
@@ -168,7 +168,7 @@ h6 {
 #header #logo h1 a:hover {
     color: #fff;
     padding-left: 10px;
-    border-left: 4px solid #18d26e;
+    border-left: 4px solid #ff9306;
 }
 
 #header #logo img {
@@ -326,12 +326,12 @@ h6 {
     transition: 0.5s;
     margin: 10px;
     color: #fff;
-    background: #18d26e;
+    background: #ff9306;
 }
 
 #intro .btn-get-started:hover {
     background: #fff;
-    color: #18d26e;
+    color: #ff9306;
 }
 
 /*--------------------------------------------------------------
@@ -420,7 +420,7 @@ h6 {
 
 .nav-menu li:hover>a,
 .nav-menu>.menu-active>a {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 .nav-menu>li {
@@ -448,7 +448,7 @@ h6 {
 }
 
 .nav-menu ul li:hover>a {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 .nav-menu ul ul {
@@ -517,7 +517,7 @@ h6 {
 }
 
 #mobile-nav ul li a:hover {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #mobile-nav ul li li {
@@ -525,7 +525,7 @@ h6 {
 }
 
 #mobile-nav ul li.menu-active a {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #mobile-nav ul .menu-has-children i {
@@ -538,7 +538,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-has-children i.fa-chevron-up {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #mobile-nav ul .menu-has-children li a {
@@ -546,7 +546,7 @@ h6 {
 }
 
 #mobile-nav ul .menu-item-active {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #mobile-body-overly {
@@ -608,7 +608,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     display: block;
     width: 40px;
     height: 3px;
-    background: #18d26e;
+    background: #ff9306;
     bottom: 0;
     left: calc(50% - 20px);
 }
@@ -647,7 +647,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     display: block;
     width: 40px;
     height: 3px;
-    background: #18d26e;
+    background: #ff9306;
     bottom: 0;
     left: calc(50% - 20px);
 }
@@ -902,8 +902,8 @@ body.mobile-nav-active #mobile-nav-toggle {
         height: 600px;
     }
     .box{
-        width: 80%;
-        height:1500px;
+        width: 100%;
+        height:1150px;
     }
     .text div p{
         font-size: 12px;
@@ -929,7 +929,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         height: 1300px;
     }
 }
-@media(max-width: 740px){
+@media(max-width: 760px){
     .box{
         height: 1350px;
         width: 95%;
@@ -937,18 +937,25 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 @media(max-width: 600px){
     .box{
-        top: 110%;
+        top: 120%;
         width: 88%;
         height: 1400px;
     }
-}
-@media(max-width: 500px){
-    .box{
-        width: 75%;
-        height: 1500px;
+    #clubs .container {
+        height:1700px;
     }
 }
-@media(max-width: 420px){
+@media(max-width: 537px){
+    #clubs .container {
+        height:2000px;
+    }
+    .box{
+        width: 75%;
+        height: 1700px;
+        top: 150%;
+    }
+}
+@media(max-width: 450px){
     #clubs .container {
         height: 2300px;
     }
@@ -958,7 +965,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         height: 2000px;
     }
 }
-@media(max-width: 380px){
+@media(max-width: 385px){
     #clubs .container {
         height: 2500px;
     }
@@ -968,7 +975,17 @@ body.mobile-nav-active #mobile-nav-toggle {
         height: 2200px;
     }
 }
-@media(max-width: 325px){
+@media(max-width: 345px){
+    #clubs .container {
+        height: 2600px;
+    }
+    .box{
+        top: 195%;
+        width: 75%;
+        height: 2300px;
+    }
+}
+@media(max-width: 334px){
     #clubs .container {
         height: 2700px;
     }
@@ -1074,13 +1091,13 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
   @media(max-width: 1000px) {
     .bg-text {
-        height: 1300px;
-        width: 95%;
-        top: 50%;
+        height: 900px;
+        width: 115%;
+        top: 40%;
         font-size: 17px;
       }
     #wardenMessage .container {
-        height: 1700px;
+        height: 1300px;
     }
   }
   @media(max-width: 830px) {
@@ -1104,7 +1121,7 @@ body.mobile-nav-active #mobile-nav-toggle {
         font-size: 17px;
       }
 }
-@media(max-width: 740px){
+@media(max-width: 760px){
     .bg-text {
         height: 1300px;
         width: 100%;
@@ -1121,29 +1138,79 @@ body.mobile-nav-active #mobile-nav-toggle {
         font-size: 17px;
       }
 }
-  @media(max-width: 420px){
+@media(max-width: 537px){
+    #wardenMessage .container {
+        height: 1700px;
+    }
+    .bg-text {
+        height: 1400px;
+      }
+}
+@media(max-width: 496px){
+    #wardenMessage .container {
+        height: 1800px;
+    }
+    .bg-text {
+        height: 1500px;
+        top: 58%;
+      }
+}
+  @media(max-width: 470px){
+    #wardenMessage .container {
+        height: 2000px;
+    }
+    .bg-text {
+        height: 1600px;
+        width: 96%;
+        top: 60%;
+        font-size: 17px;
+      }
+}
+@media(max-width: 426px){
     #wardenMessage .container {
         height: 2100px;
     }
     .bg-text {
-        height: 1750px;
+        height: 1720px;
         width: 95%;
         top: 65%;
         font-size: 17px;
       }
 }
-  @media(max-width: 380px){
+  @media(max-width: 411px){
     #wardenMessage .container {
         height: 2100px;
+    }
+    .bg-text {
+        height: 1800px;
+        width: 95%;
+        top: 65%;
+        font-size: 17px;
+      }
+}
+@media(max-width: 390px){
+    #wardenMessage .container {
+        height: 2300px;
     }
     .bg-text {
         height: 1900px;
         width: 95%;
-        top: 65%;
+        top: 70%;
         font-size: 17px;
       }
 }
-@media(max-width: 325px){
+@media(max-width: 358px){
+    #wardenMessage .container {
+        height: 2300px;
+    }
+    .bg-text {
+        height: 2000px;
+        width: 95%;
+        top: 70%;
+        font-size: 17px;
+      }
+}
+@media(max-width: 340px){
     #wardenMessage .container {
         height: 2500px;
     }
@@ -1201,7 +1268,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     padding-top: 8px;
     text-align: center;
     position: absolute;
-    background-color: #18d26e;
+    background-color: #ff9306;
     border-radius: 50%;
     text-align: center;
     border: 4px solid #fff;
@@ -1222,7 +1289,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #events .about-col:hover i {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #events .about-col h2 {
@@ -1239,7 +1306,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #events .about-col h2 a:hover {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #events .about-col p {
@@ -1384,7 +1451,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 #gallery #gallery-flters li:hover,
 #gallery #gallery-flters li.filter-active {
-    background: #18d26e;
+    background: #ff9306;
     color: #fff;
 }
 
@@ -1476,7 +1543,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 }
 
 #gallery .gallery-item .gallery-info h4 a:hover {
-    color: #18d26e;
+    color: #ff9306;
 }
 
 #gallery .gallery-item .gallery-info p {
@@ -1487,6 +1554,12 @@ body.mobile-nav-active #mobile-nav-toggle {
     font-size: 14px;
     text-transform: uppercase;
 }
+.page {
+    display: none;
+  }
+  .page-active {
+    display: block;
+  }
 
 /* Team Section
 --------------------------------*/
@@ -1627,6 +1700,19 @@ body.mobile-nav-active #mobile-nav-toggle {
 
 
 /*--------------------------------------------------------------
+#Route map
+--------------------------------------------------------------*/
+
+#routemap {
+    padding: 30px 0;
+    background: linear-gradient(112.15334473777807deg, rgb(23, 197, 197) 5.533854166666667%, rgb(46, 64, 66) 96.67968749999999%);
+}
+
+.routeImg {
+    padding: 50px 0;
+}
+
+/*--------------------------------------------------------------
 # Responsive Media Queries
 --------------------------------------------------------------*/
 
@@ -1649,7 +1735,32 @@ body.mobile-nav-active #mobile-nav-toggle {
     }   
 }
 
-@media (max-width: 1024px) {
+@media (max-width: 1272px) {
+    .back-to-top {
+        bottom: 15px;
+    }
+
+    #header #logo h1 {
+        font-size: 28px;
+    }
+
+    #header #logo img {
+        max-height: 80px;
+    }
+
+    #intro h2 {
+        font-size: 28px;
+    }
+
+    #nav-menu-container {
+        display: none;
+    }
+
+    #mobile-nav-toggle {
+        display: inline;
+    }
+}
+@media (max-width: 770px) {
     .back-to-top {
         bottom: 15px;
     }
