--- a/gymkhana/css/style.css
+++ b/gymkhana/css/style.css
@@ -1252,7 +1252,7 @@ body.mobile-nav-active #mobile-nav-toggle {
 .profile-card .profile-content::after {
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: 50%;
     right: 0;
     width: 50%;
     height: 40%;
@@ -1260,6 +1260,7 @@ body.mobile-nav-active #mobile-nav-toggle {
     border-left: 3px solid transparent;
     border-top: 3px solid transparent;
     transition: all 0.50s linear;
+    z-index: 2;
 }
 
 .profile-card:hover .profile-content:before {
@@ -1366,22 +1367,28 @@ body.mobile-nav-active #mobile-nav-toggle {
 .profile-card:hover .social-link {
     opacity: 1;
     transform: translateY(0);
+    position: relative;
+    z-index: 1000;
 }
 
 .profile-card .profile-content .social-link li {
     display: inline-block;
     list-style: none;
+    position: relative;
     margin: 0 4px;
+    z-index: 1000;
 }
 
 .profile-card .profile-content .social-link li a {
     color: #333;
     width: 30px;
     height: 25px;
+    position: relative;
     line-height: 24px;
     text-align: center;
     border-radius: 5px;
     background-color: #fff;
+    z-index: 1000;
 }
 
 /* tab controllers */
